--- a/slot_machine/index.html
+++ b/slot_machine/index.html
@@ -233,7 +233,7 @@ input[type="button"] {
     
 
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    <script src="jquery-1.7.2.min.js"></script>
     <script src="jquery.easing.1.3.js" type="text/javascript" charset="utf-8"></script>
     <script src="jquery.jSlots.min.js" type="text/javascript" charset="utf-8"></script>
     <script type="text/javascript" charset="utf-8">
