--- a/slot_machine/index.html
+++ b/slot_machine/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>jSlots Slot Machine - Matthew Lein</title>
+<title>Shiuan's daily theme slot machine</title>
 
 <link href='http://fonts.googleapis.com/css?family=Gravitas+One&text=1234567' rel='stylesheet' type='text/css'>
 
@@ -222,7 +222,7 @@ input[type="button"] {
                 <input type="button" id="playFancy" value="Play">
             </div>
 
-            <p>參照github matthewlein 大神的js拉霸程式碼並修改！</p>
+            <p>參照github Matthew Lein 大神的js拉霸程式碼並修改！</p>
             <a href="https://github.com/matthewlein/jQuery-jSlots">jQuery-jSlots</a>
             <p>Thanks for matthewlein's source code!</p>
             <p>jSlots is 2k of jQuery slot machine magic. It turns any list (&lt;ol&gt; or &lt;ul&gt;) into a slot machine!</p>
