setting camDiv and when catch barcode stop camrea

--- a/js_scanner/barcode.html
+++ b/js_scanner/barcode.html
@@ -34,7 +34,7 @@
             </div>
 
             <div id="camDiv" style="display:none">
-                <video id="video" width="600" height="400" style="border: 1px solid gray"></video>
+                <video id="video" style="border: 1px solid gray;max-width:600px;max-height:400"></video>
             </div>
 
             <div id="sourceSelectPanel" style="display:none">
